// Copyright 2023 Shenry Tech AB
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "github.com/shenrytech/shdb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";

/*

  Key:
    Type 32bit
    UUID 16*8bit
    Labels
    Description
    Timestamps
    MessagePayload
*/

package shdb.v1;

message Metadata {
  bytes type = 1;
  bytes uuid = 2;
  repeated string labels = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message ObjRef {
  bytes type = 1;
  bytes uuid = 2;
}

message SearchHit {
  Metadata metadata = 1;
  repeated string hits = 2;
}

message SearchResult { repeated SearchHit hits = 1; }

service ObjectService {
  rpc List(ListReq) returns (ListRsp);
  rpc Get(GetReq) returns (Object);
  rpc Create(CreateReq) returns (Object);
  rpc Update(UpdateReq) returns (Object);
  rpc Delete(DeleteReq) returns (Object);

  rpc StreamRefs(StreamRefReq) returns (stream ObjRef);

  rpc GetSchema(google.protobuf.Empty)
      returns (google.protobuf.FileDescriptorSet);
  rpc GetTypeNames(google.protobuf.Empty) returns (GetTypeNamesRsp);
}

message Object {
  bytes key = 1;
  bytes value = 2;
}

message ListReq {
  bytes type = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListRsp {
  repeated Object objects = 1;
  string next_page_token = 2;
}

message GetReq { ObjRef ref = 1; }

message CreateReq { bytes type = 1; }

message UpdateReq { Object object = 1; }

message DeleteReq { ObjRef ref = 1; }

message Shdb_Message_Options {
  string type = 1;
  repeated string aliases = 2;
  bytes type_key = 3;
  map<string, string> print_templates = 4;
}

message GetTypeNamesRsp {
  message TypeAliases {
    string fullname = 1;
    repeated string aliases = 2;
  };
  repeated TypeAliases type_aliases = 1;
}

message StreamRefReq {
  bytes type_key = 1;
}

extend google.protobuf.MessageOptions {
  optional Shdb_Message_Options shdb_options = 52000;
}

extend google.protobuf.MessageOptions {
  optional string shdb_type = 51234;
  optional string shdb_aliases = 51235;
  optional bytes shdb_type_key = 51236;
}
